# matchstick

./: .gitmodules  CMakeLists.txt  config.json
inputs/: data_oriented.txt
src/: main.cpp
